spring-boot-archetype/src/config/cdh-feign.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cdh-feign-service
  namespace: kube-system
  labels:
    app: cdh-feign-service
spec:
  type: NodePort
  ports:
    - port: 1111
      targetPort: 1111
      protocol: TCP
      name: http
  selector:
    app: cdh-feign-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdh-feign-deployment
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: cdh-feign-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: cdh-feign-pod
    spec:
      containers:
        - name: cdh-feign-container
          image: 192.168.63.131:5000/cdh-feign:1.1  #本地私有镜像库的镜像名称+版本
          ports:
            - containerPort: 1111
