spring-boot-archetype/src/config/cdh2-feign.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cdh-feign-service-gray
  namespace: kube-system
  labels:
    app: cdh-feign-service-gray
spec:
  type: NodePort
  ports:
    - port: 1112
      targetPort: 1112
      protocol: TCP
      name: http
  selector:
    app: cdh-feign-pod-gray
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdh-feign-deployment-gray
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: cdh-feign-pod-gray
  replicas: 1
  template:
    metadata:
      labels:
        app: cdh-feign-pod-gray
    spec:
      containers:
        - name: cdh-feign-container-gray
          image: 192.168.63.131:5000/cdh-feign:1.1  #本地私有镜像库的镜像名称+版本
          ports:
            - containerPort: 1112
