spring-boot-archetype/src/config/cdh2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cdh-service-gray
  namespace: kube-system
  labels:
    app: cdh-service
spec:
  type: NodePort
  ports:
    - port: 1111
      targetPort: 1111
      protocol: TCP
      name: http
  selector:
    app: cdh-pod-gray
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdh-deployment-gray
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: cdh-pod-gray
  replicas: 1
  template:
    metadata:
      labels:
        app: cdh-pod-gray
    spec:
      containers:
        - name: cdh-container-gray
          image: 192.168.63.131:5000/cdh:1.1  #本地私有镜像库的镜像名称+版本
          ports:
            - containerPort: 1111
