spring-boot-archetype/src/config/nginx-feign-ingress-gray.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-feign
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: cdh-feign-nginx-ingress.com
      http:
        paths:
          - path: /feign
            backend:
              serviceName: cdh-feign-service
              servicePort: 1112
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-feign-gray
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
spec:
  rules:
    - host: cdh-feign-nginx-ingress.com
      http:
        paths:
          - path: /feign
            backend:
              serviceName: cdh-feign-service-gray
              servicePort: 1112
