spring-boot-archetype/src/config/nginx-ingress-gray.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: cdh-nginx-ingress.com
      http:
        paths:
          - path: /test
            backend:
              serviceName: cdh-service
              servicePort: 1111
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-gray
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
spec:
  rules:
    - host: cdh-nginx-ingress.com
      http:
        paths:
          - path: /test
            backend:
              serviceName: cdh-service-gray
              servicePort: 1111
