spring-boot-archetype/src/config/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: cdh-nginx-ingress.com
      http:
        paths:
          - path: /
            backend:
              serviceName: cdh-service
              servicePort: 1111
